--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,67 @@
-.App {
-  text-align: center;
+.container-fluid{
+  /* padding: 0; */
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* BEGIN HEADER */
+.header{
+  width: 100%;
+  height: 70px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.header--left{
+  background-color: #722ED1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header--right{
+  background-color: #616161;
+}
+/* END HEADER */
+
+
+.user{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.btn--newTask{
+  width: 80%;
+  height: 50px;
+  font-size: 20px;
+  background-color: #48a521;
+  color: white;
+}
+.initializeButton {
+  width: 80%;
+  height: 50px;
+  font-size: 20px;
+  background-color: #60b3cc;
+  color: white;
+}
+.filter > ul {
+  font-size: 20px;
+}
+.filter> ul > li {
+  cursor: pointer;
+}
+
+.filter--label ul>li:nth-child(1) > i{
+  color: #389E0D ;
+}
+.filter--label ul>li:nth-child(2) > i{
+  color: #722ED1 ;
+}
+.filter--label ul>li:nth-child(3) > i{
+  color: #13C2C2 ;
+}
+.filter--label ul>li:nth-child(4) > i{
+  color: #CF1322  ;
+}
+
+table td, table th {
+  vertical-align: middle!important;
 }
